--- a/src/markup/accounts.html
+++ b/src/markup/accounts.html
@@ -22,7 +22,38 @@
     <body>
         <div class="root">
             <h1 class="accounts">Accounts</h1>
-            <table>
+
+            <ul></ul>
+            <template id="accountsItem">
+                <li>
+                    <h3></h3>
+                    <div>
+                        <p>보유수량 :</p>
+                        <strong class="volume"></strong>
+                    </div>
+                    <div>
+                        <p>매수평균가 :</p>
+                        <strong class="avgBuyPrice"></strong>
+                    </div>
+                    <div>
+                        <p>매수금액 :</p>
+                        <strong class="buyPrice"></strong>
+                    </div>
+                    <div>
+                        <p>평가금액 :</p>
+                        <strong class="appraisalPrice"></strong>
+                    </div>
+                    <div>
+                        <p>평가손익 :</p>
+                        <strong class="gainsLosses"></strong>
+                    </div>
+                    <div>
+                        <button type="button">주문</button>
+                    </div>
+                </li>
+            </template>
+
+            <!-- <table>
                 <thead>
                     <tr>
                         <th>보유자산</th>
@@ -35,9 +66,9 @@
                     </tr>
                 </thead>
                 <tbody></tbody>
-            </table>
+            </table> -->
 
-            <template id="accountsItem">
+            <template id="accountsItem---">
                 <tr>
                     <!-- 보유자산 -->
                     <th></th>
