--- a/src/markup/accounts.html
+++ b/src/markup/accounts.html
@@ -29,25 +29,37 @@
                     <h3></h3>
                     <div>
                         <p>보유수량 :</p>
-                        <strong class="volume"></strong>
+                        <p class="volume"></p>
                     </div>
                     <div>
                         <p>매수평균가 :</p>
-                        <strong class="avgBuyPrice"></strong>
+                        <p class="avgBuyPrice">
+                            <span class="value"></span>
+                            <span class="unit"></span>
+                        </p>
                     </div>
                     <div>
                         <p>매수금액 :</p>
-                        <strong class="buyPrice"></strong>
+                        <p class="buyPrice">
+                            <span class="value"></span>
+                            <span class="unit"></span>
+                        </p>
                     </div>
                     <div>
                         <p>평가금액 :</p>
-                        <strong class="appraisalPrice"></strong>
+                        <p class="appraisalPrice">
+                            <span class="value"></span>
+                            <span class="unit"></span>
+                        </p>
                     </div>
                     <div>
                         <p>평가손익 :</p>
-                        <strong class="gainsLosses"></strong>
+                        <p class="gainsLosses">
+                            <span class="value"></span>
+                            <span class="unit"></span>
+                        </p>
                     </div>
-                    <div>
+                    <div class="actions">
                         <button type="button">주문</button>
                     </div>
                 </li>
