--- a/src/markup/accounts.html
+++ b/src/markup/accounts.html
@@ -89,7 +89,9 @@
                     </div>
                     <div>
                         <p>보유수량 :</p>
-                        <p class="volume"></p>
+                        <p class="volume">
+                            <span class="value"></span>
+                        </p>
                     </div>
                     <div>
                         <p>매수평균가 :</p>
