adding ask order

--- a/src/markup/accounts.html
+++ b/src/markup/accounts.html
@@ -70,55 +70,93 @@
             </ul>
 
             <ul class="accountsList"></ul>
-            <template id="accountsItem">
-                <li>
-                    <h3></h3>
-                    <div>
-                        <p>평가손익 :</p>
-                        <p class="gainsLosses">
-                            <span class="value"></span>
-                            <span class="unit"></span>
-                        </p>
-                    </div>
-                    <div>
-                        <p>수익률 :</p>
-                        <p class="returnRate">
-                            <span class="value"></span>
-                            <span class="percent">%</span>
-                        </p>
-                    </div>
-                    <div>
-                        <p>보유수량 :</p>
-                        <p class="volume">
-                            <span class="value"></span>
-                        </p>
-                    </div>
-                    <div>
-                        <p>매수평균가 :</p>
-                        <p class="avgBuyPrice">
-                            <span class="value"></span>
-                            <span class="unit"></span>
-                        </p>
-                    </div>
-                    <div>
-                        <p>평가금액 :</p>
-                        <p class="appraisalPrice">
-                            <span class="value"></span>
-                            <span class="unit"></span>
-                        </p>
-                    </div>
-                    <div>
-                        <p>매수금액 :</p>
-                        <p class="buyPrice">
-                            <span class="value"></span>
-                            <span class="unit"></span>
-                        </p>
-                    </div>
-                    <div class="actions">
-                        <button type="button">주문</button>
-                    </div>
-                </li>
-            </template>
         </div>
+
+        <!-- <div id="backdrop" class="backdrop" hidden></div> -->
+
+        <template id="accountsItem">
+            <li>
+                <h3></h3>
+                <div>
+                    <p>평가손익 :</p>
+                    <p class="gainsLosses">
+                        <span class="value"></span>
+                        <span class="unit"></span>
+                    </p>
+                </div>
+                <div>
+                    <p>수익률 :</p>
+                    <p class="returnRate">
+                        <span class="value"></span>
+                        <span class="percent">%</span>
+                    </p>
+                </div>
+                <div>
+                    <p>보유수량 :</p>
+                    <p class="volume">
+                        <span class="value"></span>
+                    </p>
+                </div>
+                <div>
+                    <p>매수평균가 :</p>
+                    <p class="avgBuyPrice">
+                        <span class="value"></span>
+                        <span class="unit"></span>
+                    </p>
+                </div>
+                <div>
+                    <p>평가금액 :</p>
+                    <p class="appraisalPrice">
+                        <span class="value"></span>
+                        <span class="unit"></span>
+                    </p>
+                </div>
+                <div>
+                    <p>매수금액 :</p>
+                    <p class="buyPrice">
+                        <span class="value"></span>
+                        <span class="unit"></span>
+                    </p>
+                </div>
+                <div class="actions">
+                    <button type="button" class="bidButton">매수</button>
+                    <button type="button" class="askButton">매도</button>
+                </div>
+            </li>
+        </template>
+
+        <template id="askOrder">
+            <div class="askOrder">
+                <h4>매도</h4>
+                <form>
+                    <dl>
+                        <dt>주문가능</dt>
+                        <dd class="balance">
+                            <strong class="value"></strong>
+                            <small class="unit"></small>
+                        </dd>
+                        <dt>매도가격<small>(KRW)</small></dt>
+                        <dd class="askPrice">
+                            <input type="number" name="price" />
+                            <button type="button" name="plus">+</button>
+                            <button type="button" name="minus">-</button>
+                        </dd>
+                        <dt>주문수량<small>(KRW)</small></dt>
+                        <dd>
+                            <input type="number" name="amount" />
+                        </dd>
+                        <dt>주문총액<small>(KRW)</small></dt>
+                        <dd>
+                            <input type="number" name="totalPrice" />
+                        </dd>
+                    </dl>
+                    <div class="actions">
+                        <button type="reset">초기화</button>
+                        <button type="submit">매도</button>
+                    </div>
+                    <button type="button" class="closeButton">닫기</button>
+                </form>
+            </div>
+        </template>
     </body>
 </html>
