--- a/src/markup/accounts.html
+++ b/src/markup/accounts.html
@@ -151,7 +151,7 @@
                                 <label>
                                     <input
                                         type="radio"
-                                        name="sellPrice-percent"
+                                        name="sellPrice-rate"
                                         value="0.05"
                                     />
                                     <span>5%</span>
@@ -159,7 +159,7 @@
                                 <label>
                                     <input
                                         type="radio"
-                                        name="sellPrice-percent"
+                                        name="sellPrice-rate"
                                         value="0.1"
                                     />
                                     <span>10%</span>
@@ -167,7 +167,7 @@
                                 <label>
                                     <input
                                         type="radio"
-                                        name="sellPrice-percent"
+                                        name="sellPrice-rate"
                                         value="0.15"
                                     />
                                     <span>15%</span>
@@ -175,10 +175,20 @@
                                 <label>
                                     <input
                                         type="radio"
-                                        name="sellPrice-percent"
+                                        name="sellPrice-rate"
                                         value="0.2"
                                     />
                                     <span>20%</span>
+                                </label>
+                            </div>
+                            <div class="sellPrice-options-input">
+                                <label>
+                                    <span>직접 입력</span>
+                                    <input
+                                        type="number"
+                                        name="sellPrcie-rate-input"
+                                    />
+                                    <small class="percent">%</small>
                                 </label>
                             </div>
                         </dd>
